--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -691,7 +691,8 @@ input, select, textarea {
 				}
 
 					#header nav a:hover:before {
-						background-color: rgba(255, 255, 255, 0.175);
+						/*background-color: rgba(255, 255, 255, 0.175);*/
+						background-color: rgba(0, 0, 255, 0.2);
 						color: #fff;
 					}
 
@@ -701,7 +702,8 @@ input, select, textarea {
 				}
 
 					#header nav a:active:before {
-						background-color: rgba(255, 255, 255, 0.35);
+						/*background-color: rgba(255, 255, 255, 0.35);*/
+						background-color: rgba(0, 0, 255, 0.2);
 						color: #fff;
 					}
 
