--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -226,7 +226,7 @@ input, select, textarea {
 		transform: translate3d(0,0,0);
 	/* Set your background with this */
 
-		background: #9e9e9e url("images/bg.jpg") bottom left;
+		background: #B8B8B8 url("images/bg.jpg") bottom left;
 		background-repeat: repeat-x;
 		height: 100%;
 		left: 0;
